add: page delice des sens.html, scss, css files

--- a/assets/css/delice.css
+++ b/assets/css/delice.css
@@ -747,4 +747,4 @@ input[name=menu__desserts]:checked + label .price__content {
   .food__titles {
     margin-left: 210px;
   }
-}/*# sourceMappingURL=palette_menu.css.map */
+}/*# sourceMappingURL=delice.css.map */
