--- a/assets/scss/note_enchantee.scss
+++ b/assets/scss/note_enchantee.scss
@@ -10,7 +10,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
 
-/*      Mobile-first   page delice des sens   */
+/*      Mobile-first   page note enchantée   */
 @import './components/loader.scss';
 .header__container {
     width: 100%;
@@ -59,27 +59,27 @@
 
 .page__menu{
     width: 100%;
-    height: 1120px;
+    height: 1225px;
 }
 .section{
     width: 100%;
     @extend %flexcolum-start;
-    &.section__delice{
+    &.section__note{
         width: 100%;
         position: relative;
     }
 }
-.delice__menu{
+.note__menu{
     position: relative;
     width: 100%;
-    height: 1155px;
+    height: 1260px;
     border-top-right-radius: 40px;
     border-top-left-radius: 40px;
     background-color: $grey-light;
     bottom: 35px;
 
 }
-    .delice__title{
+    .note__title{
         position: relative;
         width: 100%;
         height: 27px;
@@ -91,7 +91,7 @@
         animation-fill-mode: forwards;
         transform: translateX(5000px);
         animation-delay: $delay;
-        .title__delice{  
+        .title__note{  
             margin-left: 17px;
             }
     }
@@ -210,7 +210,7 @@
 @import './layout/footer';
 
 @media only screen and (max-width : 420px){
-  .delice__title{
+  .note__title{
     font-size: 19px;
   }
 }
@@ -219,16 +219,16 @@
     .header__container{
       max-width: 1440px;
     }
-    .section__delice{
+    .section__note{
       align-items: center;
     }
-    .delice__title{
+    .note__title{
       text-align: center;
     }
     .heart__anim{
       right: 300px;
     }
-    .delice__menu{
+    .note__menu{
       width: 1055px;
     }
     .cards{
