--- a/assets/css/delice.css
+++ b/assets/css/delice.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 /*    import des variables */
 /* Variables   */
 /* media       */
@@ -73,7 +74,7 @@ a {
   width: 100%;
 }
 
-/*      Mobile-first   page delice des sens   */
+/*      Mobile-first   page palette du goût   */
 /* Variables   */
 /* media       */
 .btn__cmder, .cmder, .cards, .header__container, .vegetable, .loader-content .loadertxt, .loader-content, .loader__cooking {
@@ -259,12 +260,12 @@ a {
 .section {
   width: 100%;
 }
-.section.section__delice {
+.section.section__palette {
   width: 100%;
   position: relative;
 }
 
-.delice__menu {
+.palette__menu {
   position: relative;
   width: 100%;
   height: 1155px;
@@ -274,7 +275,7 @@ a {
   bottom: 35px;
 }
 
-.delice__title {
+.palette__title {
   position: relative;
   width: 100%;
   height: 27px;
@@ -287,7 +288,7 @@ a {
   transform: translateX(5000px);
   animation-delay: 3s;
 }
-.delice__title .title__delice {
+.palette__title .title__palette {
   margin-left: 17px;
 }
 
@@ -714,7 +715,7 @@ input[name=menu__desserts]:checked + label .price__content {
   }
 }
 @media only screen and (max-width: 420px) {
-  .delice__title {
+  .palette__title {
     font-size: 19px;
   }
 }
@@ -723,16 +724,16 @@ input[name=menu__desserts]:checked + label .price__content {
   .header__container {
     max-width: 1440px;
   }
-  .section__delice {
+  .section__palette {
     align-items: center;
   }
-  .delice__title {
+  .palette__title {
     text-align: center;
   }
   .heart__anim {
     right: 300px;
   }
-  .delice__menu {
+  .palette__menu {
     width: 1055px;
   }
   .cards {
