--- a/assets/scss/delice.scss
+++ b/assets/scss/delice.scss
@@ -10,7 +10,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Shrikhand&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap');
 
-/*      Mobile-first   page delice des sens   */
+/*      Mobile-first   page palette du goût   */
 @import './components/loader.scss';
 .header__container {
     width: 100%;
@@ -64,12 +64,12 @@
 .section{
     width: 100%;
     @extend %flexcolum-start;
-    &.section__delice{
+    &.section__palette{
         width: 100%;
         position: relative;
     }
 }
-.delice__menu{
+.palette__menu{
     position: relative;
     width: 100%;
     height: 1155px;
@@ -79,7 +79,7 @@
     bottom: 35px;
 
 }
-    .delice__title{
+    .palette__title{
         position: relative;
         width: 100%;
         height: 27px;
@@ -91,7 +91,7 @@
         animation-fill-mode: forwards;
         transform: translateX(5000px);
         animation-delay: $delay;
-        .title__delice{  
+        .title__palette{  
             margin-left: 17px;
             }
     }
@@ -210,7 +210,7 @@
 @import './layout/footer';
 
 @media only screen and (max-width : 420px){
-  .delice__title{
+  .palette__title{
     font-size: 19px;
   }
 }
@@ -219,16 +219,16 @@
     .header__container{
       max-width: 1440px;
     }
-    .section__delice{
+    .section__palette{
       align-items: center;
     }
-    .delice__title{
+    .palette__title{
       text-align: center;
     }
     .heart__anim{
       right: 300px;
     }
-    .delice__menu{
+    .palette__menu{
       width: 1055px;
     }
     .cards{
