--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -1073,6 +1073,7 @@ input:checked + label .heart-clip {
 .footer__general {
   width: 100%;
   height: 186px;
+  padding: 0px 0px 22px 25px;
 }
 .footer__general .footer__title {
   width: 100%;
@@ -1093,7 +1094,7 @@ input:checked + label .heart-clip {
   margin-top: 47px;
   font-family: "Roboto";
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .footer__container {
@@ -1143,13 +1144,13 @@ input:checked + label .heart-clip {
   .footer__general {
     width: 100%;
     height: 114px;
-    padding-right: 100px;
+    padding: 0px;
   }
   .footer__title {
     position: absolute;
     display: flex;
     justify-content: end;
-    padding: 0px 25px;
+    padding-right: 75px;
   }
   .footer__content {
     width: 100%;
@@ -1165,7 +1166,7 @@ input:checked + label .heart-clip {
     width: 100%;
     justify-content: end;
     position: relative;
-    right: 270px;
+    right: 245px;
   }
   .fork__icon {
     position: relative;
