--- a/assets/css/note_enchantee.css
+++ b/assets/css/note_enchantee.css
@@ -606,6 +606,7 @@ input[name=menu__desserts]:checked + label .price__content {
 .footer__general {
   width: 100%;
   height: 186px;
+  padding: 0px 0px 22px 25px;
 }
 .footer__general .footer__title {
   width: 100%;
@@ -626,7 +627,7 @@ input[name=menu__desserts]:checked + label .price__content {
   margin-top: 47px;
   font-family: "Roboto";
   font-size: 16px;
-  font-weight: 500;
+  font-weight: 400;
 }
 
 .footer__container {
@@ -676,13 +677,13 @@ input[name=menu__desserts]:checked + label .price__content {
   .footer__general {
     width: 100%;
     height: 114px;
-    padding-right: 100px;
+    padding: 0px;
   }
   .footer__title {
     position: absolute;
     display: flex;
     justify-content: end;
-    padding: 0px 25px;
+    padding-right: 75px;
   }
   .footer__content {
     width: 100%;
@@ -698,7 +699,7 @@ input[name=menu__desserts]:checked + label .price__content {
     width: 100%;
     justify-content: end;
     position: relative;
-    right: 270px;
+    right: 245px;
   }
   .fork__icon {
     position: relative;
