--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -8,6 +8,7 @@
     @extend %flexcolum-start;
     width: 100%;
     height: 186px;
+    padding: 0px 0px 22px 25px;
     .footer__title{
       width: 100%;
       height: 27px;
@@ -27,7 +28,7 @@
     margin-top: 47px;
     font-family: $font-roboto;
     font-size: 16px;
-    font-weight: 500;
+    font-weight: 400;
   }
   .footer__container{
     list-style: none;
@@ -74,14 +75,14 @@
     .footer__general{
       width: 100%;
       height: 114px;
-      padding-right: 100px;
+      padding: 0px;
 
     }
       .footer__title{
         position: absolute;
         display: flex;
         justify-content: end;
-        padding: 0px 25px;
+        padding-right: 75px;
       }
     .footer__content{
       width: 100%;
@@ -97,7 +98,7 @@
       width: 100%;
       justify-content: end;
       position: relative;
-      right: 270px;
+      right: 245px;
     }
     .fork__icon{
       position: relative;
