--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -348,10 +348,6 @@ a {
   color: #355355;
 }
 
-.restaurant__cards {
-  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.1);
-}
-
 .section {
   width: 100%;
 }
@@ -794,7 +790,7 @@ a {
   content: "" counter(span);
   position: absolute;
   top: 20px;
-  left: -10px;
+  left: -13px;
   padding: 5px 10px;
   border-radius: 30px;
   background-color: #9356DC;
@@ -978,7 +974,8 @@ a {
   font-weight: bold;
   padding: 0 13px;
 }
-.card__content .card__txt:hover {
+
+.card__title:hover {
   text-decoration: underline;
 }
 
@@ -1191,6 +1188,7 @@ input:checked + label .heart-clip {
     font-size: 40px;
   }
   .section__function {
+    width: 100%;
     height: 228px;
   }
   .function__title {
@@ -1211,12 +1209,14 @@ input:checked + label .heart-clip {
     margin-bottom: 50px;
   }
   .section__restaurant {
+    width: 100%;
     height: 687px;
   }
   .cards__container {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    margin-top: 10px;
     -moz-column-gap: 100px;
          column-gap: 100px;
     row-gap: 50px;
