--- a/assets/scss/home.scss
+++ b/assets/scss/home.scss
@@ -272,7 +272,7 @@
           content: ""counter(span);
           position: absolute;
           top: 20px;
-          left: -10px;
+          left: -13px;
           padding: 5px 10px;
           border-radius: 30px;
           background-color: $violet;
@@ -432,10 +432,11 @@
     font-size: 18px;
     font-weight: bold;
     padding:0 13px;
-    &:hover{
-      text-decoration: underline;
-    }
   }
+}
+
+.card__title:hover {
+  text-decoration: underline;
 }
 .card__content p{
   
@@ -473,6 +474,7 @@
     }
 
     .section__function{
+      width: 100%;
       height: 228px;
     }
     .function__title{
@@ -493,12 +495,14 @@
       margin-bottom: 50px;
     }
     .section__restaurant{
+      width: 100%;
       height: 687px;
     }
     .cards__container{
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
+      margin-top: 10px;
       column-gap: 100px;
       row-gap: 50px;
   }
@@ -514,9 +518,6 @@
       width: calc(100% / 2 - 160px);
       height: 251px;
     }
-
-
-    
   }
   
 
