--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -549,11 +549,6 @@ a {
   width: 100%;
   height: 63px;
   box-shadow: 0px 2px 4px 0px rgba(0, 0, 0, 0.15);
-  z-index: 999;
-  transform: translateY(5000px);
-  animation: 1s header__logo linear;
-  animation-fill-mode: forwards;
-  animation-delay: 3s;
 }
 
 .logo__img {
@@ -561,50 +556,12 @@ a {
   height: 36px;
 }
 
-@keyframes header__logo {
-  0% {
-    transform: translateY(5000px);
-  }
-  25% {
-    transform: translateY(500px);
-  }
-  50% {
-    transform: translateY(250px);
-  }
-  75% {
-    transform: translateY(50px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
-}
 .header__location {
   width: 100%;
   background-color: #EAEAEA;
-  transform: translateY(5000px);
-  animation: 1s header__location linear;
-  animation-fill-mode: forwards;
-  animation-delay: 3.5s;
   z-index: 1;
 }
 
-@keyframes header__location {
-  0% {
-    transform: translateY(5000px);
-  }
-  25% {
-    transform: translateY(500px);
-  }
-  50% {
-    transform: translateY(250px);
-  }
-  75% {
-    transform: translateY(50px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
-}
 .form.form__location {
   width: 100%;
   height: 50px;
@@ -648,29 +605,19 @@ a {
 .home__title {
   width: 275px;
   height: 68px;
-  margin: 39px 58px 0px 42px;
   font-family: "Roboto";
   font-size: 24px;
   font-weight: 700;
   text-align: center;
-  transform: translateY(5000px);
-  animation: 1.2s header__titles linear;
-  animation-fill-mode: forwards;
-  animation-delay: 4s;
 }
 
 .main__title p {
-  margin: 0px 26px 0px 34px;
   width: 100%;
   height: 46px;
   font-family: "Roboto";
   font-size: 18px;
   font-weight: 300;
   text-align: center;
-  transform: translateY(5000px);
-  animation: 1.2s header__titles linear;
-  animation-fill-mode: forwards;
-  animation-delay: 4.5s;
 }
 
 .header__button {
@@ -683,14 +630,9 @@ a {
   box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.25);
   margin: 27px 75px 57px 82px;
   z-index: 1;
-  transform: translateY(5000px);
-  animation: 1.2s header__titles linear;
-  animation-fill-mode: forwards;
-  animation-delay: 4.8s;
 }
 .header__button:hover::after {
   opacity: 1;
-  box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.35);
 }
 .header__button::after {
   content: "";
@@ -706,23 +648,6 @@ a {
   transition: opacity 0.5s;
 }
 
-@keyframes header__titles {
-  0% {
-    transform: translateY(5000px);
-  }
-  25% {
-    transform: translateY(500px);
-  }
-  50% {
-    transform: translateY(250px);
-  }
-  75% {
-    transform: translateY(50px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
-}
 .btn {
   width: 180px;
   height: 24px;
@@ -744,14 +669,11 @@ a {
   z-index: 1;
   width: 100%;
   height: 440px;
+  box-sizing: border-box;
 }
 
 .function__title {
   width: 100%;
-  transform: translateY(5000px);
-  animation: 1.2s function__title linear;
-  animation-fill-mode: forwards;
-  animation-delay: 3.8s;
 }
 .function__title .title__function {
   font-family: "Roboto";
@@ -760,23 +682,6 @@ a {
   margin-left: 20px;
 }
 
-@keyframes function__title {
-  0% {
-    transform: translateY(5000px);
-  }
-  25% {
-    transform: translateY(500px);
-  }
-  50% {
-    transform: translateY(250px);
-  }
-  75% {
-    transform: translateY(50px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
-}
 .function__info {
   width: 100%;
   counter-reset: span;
@@ -804,40 +709,8 @@ a {
   border-radius: 20px;
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.15);
   margin-top: 26px;
-  transform: translateY(5000px);
-  animation: function__order 1s linear;
-  animation-fill-mode: forwards;
 }
 
-.function__order:nth-child(1) {
-  animation-delay: 5s;
-}
-
-.function__order:nth-child(2) {
-  animation-delay: 6s;
-}
-
-.function__order:nth-child(3) {
-  animation-delay: 7s;
-}
-
-@keyframes function__order {
-  0% {
-    transform: translateY(5000px);
-  }
-  25% {
-    transform: translateY(500px);
-  }
-  50% {
-    transform: translateY(250px);
-  }
-  75% {
-    transform: translateY(50px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
-}
 .mobile__icon,
 .list__icon,
 .store__icon {
@@ -869,10 +742,6 @@ a {
   font-size: 24px;
   font-weight: bold;
   padding-top: 47px;
-  animation: 1s restaurant__cards linear;
-  animation-fill-mode: forwards;
-  transform: translateY(5000px);
-  animation-delay: 5.5s;
 }
 
 .cards__container {
@@ -895,19 +764,19 @@ a {
 }
 
 .restaurant__cards:nth-child(1) {
-  animation-delay: 6s;
+  animation-delay: 2ms;
 }
 
 .restaurant__cards:nth-child(2) {
-  animation-delay: 7s;
+  animation-delay: 3ms;
 }
 
 .restaurant__cards:nth-child(3) {
-  animation-delay: 8s;
+  animation-delay: 4ms;
 }
 
 .restaurant__cards:nth-child(4) {
-  animation-delay: 9s;
+  animation-delay: 5ms;
 }
 
 @keyframes restaurant__cards {
@@ -1195,7 +1064,8 @@ input:checked + label .heart-clip {
   }
   .function__title {
     margin-top: 50px;
-    margin-left: 180px;
+    margin-left: 75px;
+    width: 90%;
   }
   .function__title .title__function {
     margin: 0;
