--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -764,19 +764,19 @@ a {
 }
 
 .restaurant__cards:nth-child(1) {
-  animation-delay: 2ms;
+  animation-delay: 2s;
 }
 
 .restaurant__cards:nth-child(2) {
-  animation-delay: 3ms;
+  animation-delay: 3s;
 }
 
 .restaurant__cards:nth-child(3) {
-  animation-delay: 4ms;
+  animation-delay: 4s;
 }
 
 .restaurant__cards:nth-child(4) {
-  animation-delay: 5ms;
+  animation-delay: 5s;
 }
 
 @keyframes restaurant__cards {
